--- a/index.html
+++ b/index.html
@@ -1,47 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Opstergo Clone</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Saidou - Apprenti DevOps</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background-color: #f4f4f9; color: #333; }
+        h1 { color: #2c3e50; }
+        h2 { color: #16a085; }
+        a { text-decoration: none; color: white; background-color: #2980b9; padding: 10px 20px; border-radius: 5px; }
+        a:hover { background-color: #1c5980; }
+        .skills { margin-top: 30px; }
+        .skills span { display: inline-block; margin: 5px 10px; padding: 5px 10px; background-color: #ecf0f1; border-radius: 4px; }
+    </style>
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <div class="logo">Opstergo</div>
-    <nav>
-      <ul>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Technologies</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Our Work</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
-    </nav>
-    <a href="#" class="btn">CONTACT US</a>
-  </header>
+    <h1>Bonjour, je suis Saidou</h1>
+    <h2>Apprenti DevOps</h2>
+    <p>Bienvenue sur mon portfolio en ligne !</p>
+    <a href="https://github.com/saidou-dia" target="_blank">Voir mes projets GitHub</a>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-text">
-      <h1>Our Solutions are Tailored for Companies of Any Size</h1>
-      <p>Our engineers will help you:</p>
-      <ul>
-        <li>Drastically increase your business revenue by leveraging cutting-edge technologies.</li>
-        <li>Achieve all security and compliance needs.</li>
-      </ul>
-      <a href="#" class="btn">EXPLORE OUR SERVICES</a>
+    <div class="skills">
+        <h3>Compétences :</h3>
+        <span>Linux</span>
+        <span>Terraform</span>
+        <span>Azure / AWS</span>
+        <span>Python / Bash</span>
+        <span>Docker / Kubernetes</span>
     </div>
-
-    <div class="hero-visual">
-      <div class="circle">
-        <div class="service security">SECURITY & COMPLIANCE</div>
-        <div class="service cloud">CLOUD SERVICES</div>
-        <div class="service devops">DEVOPS & INFRASTRUCTURE</div>
-      </div>
-    </div>
-  </section>
 </body>
 </html>
