--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyna - Cybersécurité PME & MSP</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Cyna - Cybersécurité PME & MSP</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
@@ -37,11 +37,11 @@
 
     <!-- Services -->
     <section id="solutions" class="services">
-        <h2>Découvrez nos solutions de cybersécurité pour les PME</h2>
+        <h2>Découvrez nos solutions de cybersécurité</h2>
         <div class="service-cards">
             <div class="service-card">
                 <h3>Prévention</h3>
-                <p>Audit de sécurité : Réduisez votre niveau d’exposition aux risques grâce à nos audits.</p>
+                <p>Audit de sécurité : Réduisez votre exposition aux risques grâce à nos audits.</p>
                 <a href="#" class="btn-secondary">En savoir plus</a>
             </div>
             <div class="service-card">
@@ -60,17 +60,19 @@
     <!-- Cas clients -->
     <section id="cases" class="cases">
         <h2>Ils nous font confiance</h2>
-        <div class="case-card">
-            <p>“Une équipe réactive et efficace, SOC 24/7 basé en France.”</p>
-            <h4>Edouard DB - Directeur Général</h4>
-        </div>
-        <div class="case-card">
-            <p>“Grâce au Pentest, nous avons obtenu une évaluation complète de notre sécurité.”</p>
-            <h4>Jérémy J - Directeur SI</h4>
-        </div>
-        <div class="case-card">
-            <p>“Une solution SOC 24/7 simple à déployer et efficace pour MSP.”</p>
-            <h4>Jérémie K - Directeur BU Informatique</h4>
+        <div class="case-grid">
+            <div class="case-card">
+                <p>“Une équipe réactive et efficace, SOC 24/7 basé en France.”</p>
+                <h4>Edouard DB - Directeur Général</h4>
+            </div>
+            <div class="case-card">
+                <p>“Grâce au Pentest, nous avons obtenu une évaluation complète de notre sécurité.”</p>
+                <h4>Jérémy J - Directeur SI</h4>
+            </div>
+            <div class="case-card">
+                <p>“Une solution SOC 24/7 simple à déployer et efficace pour MSP.”</p>
+                <h4>Jérémie K - Directeur BU Informatique</h4>
+            </div>
         </div>
     </section>
 
@@ -83,15 +85,17 @@
     <!-- Articles -->
     <section id="articles" class="articles">
         <h2>Nos derniers articles</h2>
-        <div class="article-card">
-            <h3>Rapport CERT cybersécurité - T2 2025</h3>
-            <p>Actualités cybersécurité : rapport CERT du deuxième trimestre 2025.</p>
-            <a href="#" class="btn-secondary">Lire l’article</a>
-        </div>
-        <div class="article-card">
-            <h3>SOC managé pour MSP</h3>
-            <p>L’avantage concurrentiel indispensable pour les MSP.</p>
-            <a href="#" class="btn-secondary">Lire l’article</a>
+        <div class="article-grid">
+            <div class="article-card">
+                <h3>Rapport CERT cybersécurité - T2 2025</h3>
+                <p>Actualités cybersécurité : rapport CERT du deuxième trimestre 2025.</p>
+                <a href="#" class="btn-secondary">Lire l’article</a>
+            </div>
+            <div class="article-card">
+                <h3>SOC managé pour MSP</h3>
+                <p>L’avantage concurrentiel indispensable pour les MSP.</p>
+                <a href="#" class="btn-secondary">Lire l’article</a>
+            </div>
         </div>
     </section>
 
@@ -104,7 +108,6 @@
         <a href="#contact" class="btn-primary">Je prends rendez-vous</a>
     </section>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2025 Cyna - Tous droits réservés</p>
         <p>LinkedIn : CYNA</p>
