--- a/index.html
+++ b/index.html
@@ -1,127 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cyna - Cybersécurité PME & MSP</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>My New Site</title>
 </head>
 <body>
-
-  <!-- Header -->
-  <header>
-    <div class="logo">Cyna</div>
-    <nav>
-      <ul>
-        <li><a href="#solutions">Solutions PME</a></li>
-        <li><a href="#soc">SOC 24/7</a></li>
-        <li><a href="#cases">Cas clients</a></li>
-        <li><a href="#team">L’équipe</a></li>
-        <li><a href="#articles">Nos articles</a></li>
-        <li><a href="#contact">Contactez-nous</a></li>
-      </ul>
-    </nav>
-    <a href="#contact" class="btn-header">Je prends rendez-vous</a>
-  </header>
-
-  <!-- Hero -->
-  <section class="hero">
-    <div class="container hero-text">
-      <h1>Pure player en cybersécurité pour PME et MSP</h1>
-      <p>Cyna protège les entreprises contre les cyberattaques</p>
-      <a href="#contact" class="btn-primary">Je prends rendez-vous</a>
-    </div>
-  </section>
-
-  <!-- Services -->
-  <section class="services" id="solutions">
-    <div class="container">
-      <h2>Découvrez nos solutions de cybersécurité</h2>
-      <div class="service-cards">
-        <div class="service-card">
-          <h3>Prévention</h3>
-          <p>Audit de sécurité : Réduisez votre exposition aux risques grâce à nos audits.</p>
-          <a href="#" class="btn-secondary">En savoir plus</a>
-        </div>
-        <div class="service-card">
-          <h3>Protection</h3>
-          <p>SOC 24/7 : Défendez-vous face aux menaces grâce à une surveillance en temps réel.</p>
-          <a href="#" class="btn-secondary">En savoir plus</a>
-        </div>
-        <div class="service-card">
-          <h3>Réponse</h3>
-          <p>Cyna CERT : Soyez sécurisé avec notre CERT en cas d’attaque.</p>
-          <a href="#" class="btn-secondary">En savoir plus</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Cas clients -->
-  <section class="cases" id="cases">
-    <div class="container">
-      <h2>Ils nous font confiance</h2>
-      <div class="case-grid">
-        <div class="case-card">
-          <p>“Une équipe réactive et efficace, SOC 24/7 basé en France.”</p>
-          <h4>Edouard DB - Directeur Général</h4>
-        </div>
-        <div class="case-card">
-          <p>“Grâce au Pentest, nous avons obtenu une évaluation complète de notre sécurité.”</p>
-          <h4>Jérémy J - Directeur SI</h4>
-        </div>
-        <div class="case-card">
-          <p>“Une solution SOC 24/7 simple à déployer et efficace pour MSP.”</p>
-          <h4>Jérémie K - Directeur BU Informatique</h4>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Team -->
-  <section class="team" id="team">
-    <div class="container">
-      <h2>L’équipe Cyna</h2>
-      <p>Des experts certifiés, proches de nos clients pour une cybersécurité optimale.</p>
-    </div>
-  </section>
-
-  <!-- Articles -->
-  <section class="articles" id="articles">
-    <div class="container">
-      <h2>Nos derniers articles</h2>
-      <div class="article-grid">
-        <div class="article-card">
-          <h3>Rapport CERT cybersécurité - T2 2025</h3>
-          <p>Actualités cybersécurité : rapport CERT du deuxième trimestre 2025.</p>
-          <a href="#" class="btn-secondary">Lire l’article</a>
-        </div>
-        <div class="article-card">
-          <h3>SOC managé pour MSP</h3>
-          <p>L’avantage concurrentiel indispensable pour les MSP.</p>
-          <a href="#" class="btn-secondary">Lire l’article</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section class="contact" id="contact">
-    <div class="container">
-      <h2>Contactez Cyna</h2>
-      <p>Email : <a href="mailto:contact@cyna-it.fr">contact@cyna-it.fr</a></p>
-      <p>Téléphone : +33 6 12 34 56 78</p>
-      <p>Adresse : 24 r Fbg Poissonnière, 75010 Paris</p>
-      <a href="#contact" class="btn-primary">Je prends rendez-vous</a>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 Cyna - Tous droits réservés</p>
-      <p>LinkedIn : CYNA</p>
-    </div>
-  </footer>
-
+    <h1>Welcome to My Site!</h1>
+    <p>This is hosted on GitHub Pages.</p>
 </body>
 </html>
