--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My New Site</title>
-    <!-- Link to your CSS file -->
+    <title>Kabeya – IT & Cloud Enthusiast</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Site!</h1>
-    <p>This is hosted on GitHub Pages.</p>
+    <header>
+        <h1>Kabeya – IT & Cloud Enthusiast</h1>
+    </header>
+
+    <section class="about">
+        <p>Passionate about cloud technologies, mastering AWS and Azure is my main goal.</p>
+        <p>Fast learner and problem solver, I thrive outside my comfort zone and actively seek challenges that foster continuous learning and professional growth.</p>
+        <p>Currently training as a Systems Administrator, I am looking for an internship opportunity between September 18 and November 13 to apply my skills in a real-world environment and deepen my expertise in IT infrastructure and cloud solutions.</p>
+    </section>
+
+    <section class="contact">
+        <h2>Connect with me</h2>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/saidoudia/" target="_blank">https://www.linkedin.com/in/saidoudia/</a></p>
+    </section>
+
+    <footer>
+        <p>© 2025 Kabeya</p>
+    </footer>
 </body>
 </html>
