--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <section class="about">
         <p>Passionate about cloud technologies, mastering AWS and Azure is my main goal.</p>
         <p>Fast learner and problem solver, I thrive outside my comfort zone and actively seek challenges that foster continuous learning and professional growth.</p>
-        <p>Currently training as a Systems Administrator, I am looking for an internship opportunity between September 18 and November 13 to apply my skills in a real-world environment and deepen my expertise in IT infrastructure and cloud solutions.</p>
+        <p>Currently training as a Systems Administrator, I am looking for an internship opportunity between September 18 and November 13.</p>
+        <p>I want to apply my skills in a real-world environment and deepen my expertise in IT infrastructure and cloud solutions.</p>
+        <p>I am now available for a new position starting from November 14.</p>
     </section>
 
     <section class="contact">
