--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kabeya – IT & Cloud Enthusiast</title>
+    <title>Saidou Dia – IT & Cloud Enthusiast</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Kabeya – IT & Cloud Enthusiast</h1>
+        <h1>Saidou Dia – IT & Cloud Enthusiast</h1>
     </header>
 
     <section class="about">
@@ -24,7 +24,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Kabeya</p>
+        <p>© 2025 Saidou Dia</p>
     </footer>
 </body>
 </html>
