--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Saidou Dia – IT & Cloud Enthusiast</title>
+    <title>Saidou DIA – IT & Cloud Enthusiast</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
