--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Saidou DIA – IT & Cloud Enthusiast</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Saidou Dia – IT & Cloud Enthusiast</h1>
-    </header>
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+    color: #333;
+    margin: 0;
+    padding: 20px;
+}
 
-    <section class="about">
-        <p>Passionate about cloud technologies, I am mastering AWS and Azure to expand my expertise.</p>
-        <p>I am a fast learner and problem solver, thriving outside my comfort zone while seeking new challenges.</p>
-        <p>Currently training as a Systems Administrator to gain practical experience in IT infrastructure.</p>
-        <p>I aim to apply my skills in real-world environments and strengthen my knowledge in cloud solutions.</p>
-        <p>I am now available for a new position starting from November 14, ready to contribute effectively.</p>
-    </section>
+header h1 {
+    text-align: center;
+    color: #007bff;
+    margin-top: 20px;
+}
 
-    <section class="contact">
-        <h2>Connect with me</h2>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/saidoudia/" target="_blank">https://www.linkedin.com/in/saidoudia/</a></p>
-    </section>
+section {
+    max-width: 800px; /* même largeur pour toutes les sections */
+    margin: 40px auto; /* centrer horizontalement et espace vertical */
+    line-height: 1.6;
+    font-size: 18px;
+    text-align: center; /* centre le texte de toutes les sections */
+}
 
-    <footer>
-        <p>© 2025 Saidou Dia</p>
-    </footer>
-</body>
-</html>
+.contact a {
+    color: #007bff;
+    text-decoration: none;
+}
+
+.contact a:hover {
+    text-decoration: underline;
+}
+
+footer {
+    text-align: center;
+    margin-top: 60px;
+    color: #777;
+}
