--- a/index.html
+++ b/index.html
@@ -1,36 +1,76 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    color: #333;
-    margin: 0;
-    padding: 20px;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Saidou Dia - Cloud Enthusiast</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
 
-header h1 {
-    text-align: center;
-    color: #007bff;
-    margin-top: 20px;
-}
+        header h1 {
+            text-align: center;
+            color: #007bff;
+            margin-top: 20px;
+        }
 
-section {
-    max-width: 800px; /* même largeur pour toutes les sections */
-    margin: 40px auto; /* centrer horizontalement et espace vertical */
-    line-height: 1.6;
-    font-size: 18px;
-    text-align: center; /* centre le texte de toutes les sections */
-}
+        section {
+            max-width: 700px;
+            margin: 40px auto;
+            line-height: 1.6;
+            font-size: 18px;
+            text-align: center;
+        }
 
-.contact a {
-    color: #007bff;
-    text-decoration: none;
-}
+        .linkedin-btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #0077b5;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            margin-top: 20px;
+        }
 
-.contact a:hover {
-    text-decoration: underline;
-}
+        .linkedin-btn:hover {
+            background-color: #005582;
+        }
 
-footer {
-    text-align: center;
-    margin-top: 60px;
-    color: #777;
-}
+        footer {
+            text-align: center;
+            margin-top: 60px;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Passionate About Cloud Technologies</h1>
+    </header>
+
+    <section>
+        <p>
+            I am dedicated to mastering AWS and Azure, with a strong drive for continuous learning.
+            A fast learner and problem solver, I thrive outside my comfort zone and actively seek challenges
+            that promote professional growth.
+        </p>
+        <p>
+            I recently completed Systems Administrator training and am currently exploring new opportunities,
+            available to start from November 14.
+        </p>
+        <a class="linkedin-btn" href="https://www.linkedin.com/in/saidoudia/" target="_blank" rel="noopener noreferrer">
+            Visit my LinkedIn
+        </a>
+    </section>
+
+    <footer>
+        &copy; 2025 Saidou Dia. All rights reserved.
+    </footer>
+</body>
+</html>
