--- a/index.html
+++ b/index.html
@@ -4,50 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saidou Dia - Cloud Enthusiast</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
-
-        header h1 {
-            text-align: center;
-            color: #007bff;
-            margin-top: 20px;
-        }
-
-        section {
-            max-width: 700px;
-            margin: 40px auto;
-            line-height: 1.6;
-            font-size: 18px;
-            text-align: center;
-        }
-
-        .linkedin-btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #0077b5;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-            margin-top: 20px;
-        }
-
-        .linkedin-btn:hover {
-            background-color: #005582;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 60px;
-            color: #777;
-        }
-    </style>
+    <!-- Lien vers le fichier CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
