--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saidou Dia - Cloud Enthusiast</title>
-    <!-- Lien vers le fichier CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Passionate About Cloud Technologies</h1>
+        <h1>Saidou Dia</h1>
+        <p class="subtitle">Cloud & IT Enthusiast | Azure & AWS | Systems Administrator</p>
     </header>
 
-    <section>
+    <section class="about">
+        <h2>About Me</h2>
         <p>
             I am dedicated to mastering AWS and Azure, with a strong drive for continuous learning.
             A fast learner and problem solver, I thrive outside my comfort zone and actively seek challenges
@@ -25,6 +26,20 @@
         <a class="linkedin-btn" href="https://www.linkedin.com/in/saidoudia/" target="_blank" rel="noopener noreferrer">
             Visit my LinkedIn
         </a>
+    </section>
+
+    <section class="skills">
+        <h2>Technical Skills</h2>
+        <div class="skill-list">
+            <span>Windows Server</span>
+            <span>Linux Administration</span>
+            <span>Azure / AWS</span>
+            <span>Terraform</span>
+            <span>Ansible</span>
+            <span>PowerShell / Python</span>
+            <span>Citrix</span>
+            <span>Microsoft 365</span>
+        </div>
     </section>
 
     <footer>
