--- a/index.html
+++ b/index.html
@@ -1,49 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saidou Dia - Cloud Enthusiast</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Saidou Dia</h1>
-        <p class="subtitle">Cloud & IT Enthusiast | Azure & AWS | Systems Administrator</p>
-    </header>
+<section class="skills">
+    <h2>Technical Skills</h2>
+    <div class="skill-list">
+        <!-- Réseaux -->
+        <span>IP, LAN, WAN</span>
+        <span>Switches & Routeurs (CISCO)</span>
+        <span>Firewalls</span>
 
-    <section class="about">
-        <h2>About Me</h2>
-        <p>
-            I am dedicated to mastering AWS and Azure, with a strong drive for continuous learning.
-            A fast learner and problem solver, I thrive outside my comfort zone and actively seek challenges
-            that promote professional growth.
-        </p>
-        <p>
-            I recently completed Systems Administrator training and am currently exploring new opportunities,
-            available to start from November 14.
-        </p>
-        <a class="linkedin-btn" href="https://www.linkedin.com/in/saidoudia/" target="_blank" rel="noopener noreferrer">
-            Visit my LinkedIn
-        </a>
-    </section>
+        <!-- Systèmes & Virtualisation -->
+        <span>Windows 11 / Server 2012→2022</span>
+        <span>Linux (Kali, Ubuntu, Fedora, CentOS, Alma Linux)</span>
+        <span>VMware / Hyper-V</span>
+        <span>SAN & NAS Storage</span>
 
-    <section class="skills">
-        <h2>Technical Skills</h2>
-        <div class="skill-list">
-            <span>Windows Server</span>
-            <span>Linux Administration</span>
-            <span>Azure / AWS</span>
-            <span>Terraform</span>
-            <span>Ansible</span>
-            <span>PowerShell / Python</span>
-            <span>Citrix</span>
-            <span>Microsoft 365</span>
-        </div>
-    </section>
+        <!-- Cloud & DevOps -->
+        <span>Azure & AWS</span>
+        <span>Terraform</span>
+        <span>Ansible</span>
+        <span>PowerShell / Bash / SQL</span>
 
-    <footer>
-        &copy; 2025 Saidou Dia. All rights reserved.
-    </footer>
-</body>
-</html>
+        <!-- Sécurité -->
+        <span>ISO 27001 / 27005</span>
+        <span>RGPD</span>
+        <span>Network Security</span>
+
+        <!-- Outils & Monitoring -->
+        <span>Active Directory / Azure AD</span>
+        <span>Office 365 / Exchange</span>
+        <span>Splunk</span>
+        <span>ServiceNow</span>
+        <span>Mobile Device Management</span>
+    </div>
+</section>
