--- a/index.html
+++ b/index.html
@@ -30,26 +30,41 @@
 
     <section class="skills">
         <h2>Technical Skills</h2>
+
+        <h3>Networking & Security</h3>
         <div class="skill-list">
             <span>IP, LAN, WAN</span>
-            <span>Switches & Routeurs (CISCO)</span>
+            <span>Switches & Routers (CISCO)</span>
             <span>Firewalls</span>
+            <span>Network Security</span>
+            <span>ISO 27001 / 27005</span>
+            <span>GDPR</span>
+        </div>
+
+        <h3>Operating Systems & Virtualization</h3>
+        <div class="skill-list">
             <span>Windows 11 / Server 2012→2022</span>
             <span>Linux Administration (Kali, Ubuntu, Fedora, CentOS, Alma Linux)</span>
-            <span>VMware / Hyper-V</span>
+            <span>VMware ESXi / Hyper-V / Proxmox</span>
             <span>SAN & NAS Storage</span>
+        </div>
+
+        <h3>Cloud & DevOps</h3>
+        <div class="skill-list">
             <span>Azure / AWS</span>
-            <span>Terraform</span>
-            <span>Ansible</span>
-            <span>PowerShell / Python (apprentissage)</span>
-            <span>ISO 27001 / 27005</span>
-            <span>RGPD</span>
-            <span>Network Security</span>
+            <span>Terraform (Beginner)</span>
+            <span>Ansible (Beginner)</span>
+            <span>Git</span>
+            <span>PowerShell / Python (Learning)</span>
+        </div>
+
+        <h3>Administration & Tools</h3>
+        <div class="skill-list">
             <span>Active Directory / Azure AD</span>
             <span>Office 365 / Exchange</span>
-            <span>Splunk</span>
             <span>ServiceNow</span>
             <span>Mobile Device Management</span>
+            <span>Splunk (Beginner)</span>
         </div>
     </section>
 
